--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,7 @@
-deploy.ant.properties.file=/home/thanh/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31825358229.properties
-j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/thanh/glassfish5/glassfish/domains/domain1
-j2ee.server.home=/home/thanh/glassfish5/glassfish
-j2ee.server.instance=[/home/thanh/glassfish5/glassfish:/home/thanh/glassfish5/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/thanh/glassfish5
+deploy.ant.properties.file=C:\\Users\\sinhs\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
+j2ee.server.home=E:/xampp/tomcat
+j2ee.server.instance=tomcat70:home=E:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=/home/thanh/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\sinhs\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
